<resources>
    <string name="app_name">Journal App</string>
    <string name="text_journal">Journal</string>
    <string name="text_profile">Profile</string>
    <string name="text_settings">Settings</string>
    <string name="text_help">Help</string>
    <string name="text_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="text_title">Title</string>
    <string name="text_hint_edit_entry">What\'s up?</string>
    <string name="text_delete">Delete</string>
    <string name="text_back">Back</string>
    <string name="text_confirmation_delete_entry">Are you sure you want to delete this entry?</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_sign_in_with_google">Sign in with Google</string>
    <string name="text_info_sign_in_navigation_header">Sign in to save and sync your Journal</string>
    <string name="text_info_login_sync_navigation_header">Your Journal is synced with Google</string>
    <string name="text_info_empty_entries">You have no entries yet.</string>
    <string name="text_github_repo">Github Repo</string>
    <string name="text_cache"><![CDATA[Cache & Backup]]></string>
    <string name="text_account">Account</string>
    <string name="text_data">Data</string>
    <string name="text_backup_and_sync"><![CDATA[Backup & Sync]]></string>
    <string name="text_clear_data">Clear Data</string>
    <string name="text_clear_data_info">This will clear both local and online backups.</string>
    <string name="text_signin_info">Sign in to backup and sync your data</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_cache_cleared">Cache cleared</string>
    <string name="text_sign_in_failed">Sign in failed</string>
    <string name="text_signed_in">Signed in</string>
    <string name="text_signed_out">Signed out</string>
    <string name="text_confirmation_delete_cache">Are you sure you want to clear all your data?</string>
</resources>
