<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/text_settings">

    <PreferenceCategory
        android:title="@string/text_data">

        <SwitchPreference
            android:key="pref_sync_enabled"
            android:title="@string/text_backup_and_sync"
            android:defaultValue="true"
            />

        <Preference
            android:id="@+id/pref_clear_data"
            android:key="pref_clear_data"
            android:title="@string/text_clear_data"
            android:summary="@string/text_clear_data_info" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/text_account">

        <Preference
            android:key="pref_sign_in"
            android:title="@string/text_sign_in_with_google"
            android:summary="@string/text_signin_info"
            android:icon="@drawable/ic_action_google_light"
            />


    </PreferenceCategory>


</PreferenceScreen>