<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_action_person"
            android:title="@string/text_profile" />
    </group>

    <group
        android:id="@+id/group_prefs"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/text_settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_action_live_help"
            android:title="@string/text_help" />
    </group>


</menu>